--- a/index.html
+++ b/index.html
@@ -1759,8 +1759,8 @@
             }
 
             // API Call
+            // API Call (Via Vercel Serverless Function)
             async function callGeminiAPI(history, imageBase64 = null) {
-                const apiKey = "AIzaSyDzxKU9B7Qa12zhpT3xwOVsp305HDDVeFY";
                 let dynamicPrompt = SYSTEM_PROMPT;
 
                 const lastUserMessage = history.length > 0 ? history[history.length - 1].parts[0].text : "";
@@ -1777,47 +1777,27 @@
                     }
                 }
 
-                // Camera Image Context
-                let contents = history;
+                // If image exists, add hint to prompt
                 if (imageBase64) {
-                    // Start response with specific phrase
-                    // We append this instruction to the PROMPT for this turn
                     dynamicPrompt += `\n\n【画像入力】\nユーザーから画像が送信されました。「画像を拝見しました。」から回答を始めてください。画像の内容を説明し、もしメニューや商品が写っていれば特定して案内してください。`;
-
-                    // Construct Multimodal Payload
-                    // Use a copy of history but replace the last user message with multimodal parts
-                    // Or simply append if history doesn't have it? 
-                    // Usually history has the user's text "Look at this". 
-                    // We need to attach image to THAT turn.
-
-                    const historyCopy = JSON.parse(JSON.stringify(history));
-                    const lastTurn = historyCopy[historyCopy.length - 1];
-                    if (lastTurn && lastTurn.role === "user") {
-                        // Clean Base64 (remove header)
-                        const rawBase64 = imageBase64.replace(/^data:image\/(png|jpeg|jpg);base64,/, '');
-
-                        lastTurn.parts = [
-                            { text: "お客様が撮影した画像です。内容を説明し、もしメニューや商品が分かれば教えてください。" },
-                            { inline_data: { mime_type: "image/png", data: rawBase64 } }
-                        ];
-                    }
-                    contents = historyCopy;
                 }
 
                 try {
-                    const payload = {
-                        system_instruction: { parts: [{ text: dynamicPrompt }] },
-                        contents: contents
-                    };
-                    const response = await fetch("https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=" + apiKey, {
+                    const response = await fetch("/api/chat", {
                         method: "POST",
                         headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify(payload)
+                        body: JSON.stringify({
+                            history: history,
+                            imageBase64: imageBase64,
+                            systemPrompt: dynamicPrompt
+                        })
                     });
+
                     const data = await response.json();
+
                     if (data.error) {
                         console.error("API Error Details:", data.error);
-                        return "申し訳ありません。エラーが発生しました: " + data.error.message;
+                        return "申し訳ありません。エラーが発生しました: " + (data.error.message || "Unknown Error");
                     }
                     return data?.candidates?.[0]?.content?.parts?.[0]?.text || "応答の生成に失敗しました。";
                 } catch (e) {
